Rotating vertices on the UV map by a fixed number immediately crashes Blender #68001

Closed
opened 2019-07-31 15:06:08 +02:00 by Erik Abrahamsson · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.81 (sub 0), branch: master, commit date: 2019-07-30 19:32, hash: fe47c7bf84
Worked: (optional)

Short description of error
Rotating vertices on the UV map by a fixed number immediately crashes Blender

Exact steps for others to reproduce the error
Open a new file with the default cube, go to UV workspace, select all vertices on the UV map and press R. Now it's working fine to rotate with the mouse but as soon as hitting a number on the numpad Blender crashes with "EXCEPTION_ACCESS_VIOLATION"

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.81 (sub 0), branch: master, commit date: 2019-07-30 19:32, hash: `fe47c7bf84` Worked: (optional) **Short description of error** Rotating vertices on the UV map by a fixed number immediately crashes Blender **Exact steps for others to reproduce the error** Open a new file with the default cube, go to UV workspace, select all vertices on the UV map and press R. Now it's working fine to rotate with the mouse but as soon as hitting a number on the numpad Blender crashes with "EXCEPTION_ACCESS_VIOLATION"
Author
Member

Added subscriber: @erik85

Added subscriber: @erik85

Added subscribers: @mont29, @brecht

Added subscribers: @mont29, @brecht

@mont29, related to your recent fix perhaps?

@mont29, related to your recent fix perhaps?
Bastien Montagne self-assigned this 2019-07-31 15:11:08 +02:00

that's likely yes.... will check

that's likely yes.... will check

I can reproduce it. Note I'm using "Unbreak Now!" for regressions like this that we should fix immediately, and "High Priority" for things that must be fixed for the next release.

I can reproduce it. Note I'm using "Unbreak Now!" for regressions like this that we should fix immediately, and "High Priority" for things that must be fixed for the next release.

This issue was referenced by b0531227d4

This issue was referenced by b0531227d40e2b4c147367fe87e311efd92de80d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68001
No description provided.